--- a/github-user-card/src/App.css
+++ b/github-user-card/src/App.css
@@ -1,22 +1,48 @@
-.App {
+h1 {
+  font-size: 5rem;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
+.user-card, .followers-card {
+  border: 4px solid antiquewhite;
+  background-color: darkgray;
+  text-align: center;
+  margin: 3rem auto;
+  box-shadow: 1rem 1rem 1rem 1rem #d3d3d35d;
+}
+.user-card {
+  width: 35rem;
+}
+.followers-card {
+  width: 25rem;
+}
+.user-img {
+  max-width: 20rem;
+  max-height: 20rem;
+  border: 4px solid antiquewhite;
+  margin-bottom: 3rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.followers-img {
+  max-width: 12rem;
+  max-height: 12rem;
+  border: 3px solid antiquewhite;
+  margin-bottom: 1.5rem;
+}
+.user-name {
+  font-size: 5rem;
+  margin: 2rem auto;
+  text-decoration: underline;
 }
 
-.App-link {
-  color: #09d3ac;
+.followers-name {
+  font-size: 3rem;
+  margin: 1rem auto;
+  text-decoration: underline;
+}
+
+h2 {
+  font-size: 4rem;
+  text-align: center;
+  text-decoration: underline;
+  /* background-color: antiquewhite; */
 }
