--- a/github-user-card/src/index.css
+++ b/github-user-card/src/index.css
@@ -1,10 +1,9 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Indie Flower', cursive;
+  font-size: 62.5%;
+  background-color: cornflowerblue;
+  color: antiquewhite;
 }
 
 code {
