--- a/github-user-card/src/App.css
+++ b/github-user-card/src/App.css
@@ -46,3 +46,7 @@ h2 {
   text-decoration: underline;
   /* background-color: antiquewhite; */
 }
+
+.followers-card a, .user-card a {
+  color: antiquewhite;
+}
